@@ -93,9 +93,7 @@ tests/DCPS/Reconnect/run_test.pl restart_pub: !DCPS_MIN
 tests/DCPS/Reconnect/run_test.pl bp_timeout: !DCPS_MIN
 tests/DCPS/Reconnect/run_test.pl sub_init_crash: !DCPS_MIN
 tests/DCPS/sub_init_loop/run_test.pl: !DCPS_MIN
-tests/DCPS/TimeBasedFilter/run_test.pl -ms 0: !DCPS_MIN
-tests/DCPS/TimeBasedFilter/run_test.pl -ms 5: !DCPS_MIN
-tests/DCPS/TimeBasedFilter/run_test.pl -ms 10: !DCPS_MIN
+tests/DCPS/TimeBasedFilter/run_test.pl: !DCPS_MIN
 
 tests/DCPS/BuiltInTopic/run_test.pl: !DCPS_MIN !NO_BUILT_IN_TOPICS
 tests/DCPS/BuiltInTopic/run_test.pl ignore_part: !DCPS_MIN !NO_BUILT_IN_TOPICS
